add annotations for tag descriptions
